--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Run Buddy</title>
     </head>
     <body>
-        <h2>RUN BUDDY</h2>
-        What We Do 🏃
+        <h1>RUN BUDDY</h1>
+        What We Do You D0 Trainers Reach Out
     </body>
 </html>
