html outline and gitigonre

--- a/index.html
+++ b/index.html
@@ -4,8 +4,27 @@
         <meta charset=""UFT-8" />
         <title>Run Buddy</title>
     </head>
-    <body>
+<!-- navigation -->
+    <header>
         <h1>RUN BUDDY</h1>
-        What We Do You D0 Trainers Reach Out
-    </body>
+    </header>
+<!-- hero/jumbotron -->
+    <section>
+
+    </section>
+<!-- "what we do" secion -->
+    <section>
+        <h2>What We Do</h2>
+    </section>
+<!-- "meet the trainer" section -->
+    <section>
+        <h2>Meet the Trainers</h2>
+    </section>
+<!-- "Reach Out" section -->
+    <section>
+        <h2>Reach Out</h2>
+    </section>
+    <footer>
+            <h2>❤️ Made with the ove by Run Buddy</h2>
+    </footer>
 </html>
