--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
         <h2>Reach Out</h2>
     </section>
     <footer>
-            <h2>❤️ Made with the ove by Run Buddy</h2>
+            <h2>❤️ Made with the love by Run Buddy</h2>
     </footer>
 </html>
