--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset=""UFT-8" />
         <title>Run Buddy</title>
+        <link rel="stylesheet" href="./assets/css/style.css">
     </head>
-<!-- navigation -->
     <header>
         <h1>
             <a href="/">RUN BUDDY</a>
