--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
         </section>
     <!-- "what we do" secion -->
-        <section>
+        <section id="what-we-do" class="intro">
             <h2>What We Do</h2>
             <p>
                 butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
@@ -70,7 +70,7 @@
         </section>
     <!-- "What you do" section -->
         <section>
-            <h2 id="what-we-do">
+            <h2>
                 What You Do
             </h2>
             <div>
