--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang=""en">
+<html lang="en-us">
     <head>
         <meta charset=""UFT-8" />
         <title>Run Buddy</title>
