--- a/index.html
+++ b/index.html
@@ -182,23 +182,6 @@
         <section id="reach-out" class="contact">
             <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3234.45299013341!2d-78.61568128412803!3d35.837894480157914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89ac58e2f04b08f9%3A0xcdedd48365c6c0da!2s4109%20Wake%20Forest%20Rd%2C%20Raleigh%2C%20NC%2027609!5e0!3m2!1sen!2sus!4v1659184494928!5m2!1sen!2sus" 
-                width="400" 
-                height="400" 
-                style="border:0;" 
-                allowfullscreen="" 
-                loading="lazy">
-                </iframe>
-                <h3>Contact Us</h3>
-                <form>
-                    <label for="contact-name">Your Name</label>
-                    <input type="text" id="contact-name" placeholder="Your Name" />
-
-                    <label for="contact-message">Message</label>
-                    <textarea id="contact-message" placeholder="Message"></textarea>
-
-                    <button type="submit">Submit</button>
-                </form>
                 <div>
                     <h3>Run Buddy</h3>
                     <p>
@@ -214,6 +197,27 @@
                         E: <a href="mailto: info@runbuddy.io">info@runbuddy.io</a>
                     </address>
                 </div>
+                <div class="contact-form">
+                    <div>
+                        <h3>Contact Us</h3>
+                        <form>
+                            <label for="contact-name">Your Name</label>
+                            <input type="text" id="contact-name" placeholder="Your Name" />
+                            
+                            <label for="contact-message">Message</label>
+                            <textarea id="contact-message" placeholder="Message"></textarea>
+                            
+                            <button type="submit">Submit</button>
+                        </form>
+                    </div>
+                </div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3234.45299013341!2d-78.61568128412803!3d35.837894480157914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89ac58e2f04b08f9%3A0xcdedd48365c6c0da!2s4109%20Wake%20Forest%20Rd%2C%20Raleigh%2C%20NC%2027609!5e0!3m2!1sen!2sus!4v1659184494928!5m2!1sen!2sus" 
+                    width="400" 
+                    height="400" 
+                    style="border:0;" 
+                    allowfullscreen="" 
+                    loading="lazy">
+                </iframe>
             </div>
         </section>
         <footer>
