--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset=""UFT-8" />
         <title>Run Buddy</title>
         <link rel="stylesheet" href="./assets/css/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     </head>
     <body>
         <header>
@@ -85,20 +86,20 @@
                     What You Do
                 </h2>
             </div>
-            <div class="step">
-                <h3>Step 1.</h3>
-                <div class="step-info">
-                    <div class="step-img">
-                        <img src="./assets/images/step-1.svg" alt="" />
-                    </div>
-                    <div class="step-text">
-                        <h4>Fill Out the Form Above.</h4>
-                        <p>You're already here, so why not?</p>
+                <div class="step">
+                    <h3>Step 1.</h3>
+                    <div class="step-info">
+                        <div class="step-img">
+                            <img src="./assets/images/step-1.svg" alt="" />
+                        </div>
+                        <div class="step-text">
+                            <h4>Fill Out the Form Above.</h4>
+                            <p>You're already here, so why not?</p>
+                        </div>
                     </div>
                 </div>
-            </div>
             <div class="step">
-                <h3>Step 2</h3>
+                <h3>Step 2.</h3>
                 <div class="step-info">
                     <div class="step-img">
                         <img src="./assets/images/step-2.svg" alt="" />
